--- a/WebRoot/deng/source/css/index.css
+++ b/WebRoot/deng/source/css/index.css
@@ -1,39 +1,86 @@
-.qtip-target {
-    width: 100px;
-    text-align:center;
-    padding: 5px 0;
-    border:1px dotted #99bbe8;
-    background:#dfe8f6;
-    color: #15428b;
-    cursor:default;
-    margin:10px;
-    font:bold 11px tahoma,arial,sans-serif;
-    float: left;
+/* .x-body {
+	color: #404040;
+	font-size: 13px;
+	line-height: 17px;
+	font-weight: 300;
+	font-family: 'Open Sans', 'Helvetica Neue', helvetica, arial, verdana,sans-serif;
+	background: #fff;
+} */
+/* .x-accordion-layout-ct {
+	background-color: #fff;
+	padding: 0px 0px 0px 0px;
 }
-.x-accordion-item .x-accordion-hd-sibling-expanded {
-	border-top-color: #cfcfcf;
-	border-top-width: 0px;
-}
+
 .x-accordion-item .x-accordion-hd {
 	background: #fff;
-	border-width: 0 0 0px;
-	border-color: #fff #cfcfcf #cfcfcf;
+	border-width: 0;
+	border-color: #fff;
+	*
+	padding: 12px 10px;
+	*
 	padding: 6px 10px;
+} */
+
+/* .x-accordion-layout-ct {
+	background-color: #fff;
+	padding: 0px 0px 0px 0px;
+} */
+
+/* .x-panel-default-outer-border-rbl {
+	border-right-color: #f5f5f5 !important;
+	border-right-width: 1px !important;
+	border-bottom-color: #f5f5f5 !important;
+	border-bottom-width: 1px !important;
+	border-left-color: #f5f5f5 !important;
+	border-left-width: 1px !important;
+} */
+
+/**
+	.x-panel-body-default {
+	background: #fff;
+	border-color: #d0d0d0;
+	color: #404040;
+	font-size: 13px;
+	font-weight: 300;
+	font-family: 'Open Sans', 'Helvetica Neue', helvetica, arial, verdana, sans-serif;
+	border-width: 0px;
+	border-style: '';
+	}
+**/
+/* .x-accordion-hd .x-panel-header-title {
+	color: #35baf6;
+	text-transform: none;
+} */
+/**
+	.x-panel-header-default .x-tool-img {
+	    background-color: #fff;
+	}
+	.x-panel-header-default .x-tool-img {
+		background-color: #fff;
+	}
+	.x-tool-img {
+		overflow: hidden;
+		width: 16px;
+		height: 16px;
+		background-image: url(images/tools/tool-sprites.png);
+		margin: 0;
+		color: #35baf6;
+		text-align: center;
+		filter: progid : DXImageTransform . Microsoft . Alpha(Opacity = 80);
+		opacity: 0.8;
+	}
+**/
+.x-panel .x-panel-header-default-framed-top {
+	border-bottom-width: 1px !important;
 }
-.x-grid-item-focused .x-grid-cell-inner:before {
-	content: "";
-	position: absolute;
-	z-index: -1;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	pointer-events: none;
-	border: 1px solid #35baf6;
-}
-.x-panel-header-default .x-tool-img {
-    background-color: #fff;
-}
+
+
+/* element.style {
+	right: auto;
+	left: 0px;
+	top: 0px;
+	margin: 0px;
+} */
 
 /**载入初始化页面开始**/
 .loading-indicator {
@@ -91,8 +138,6 @@
 	text-align: left;
 }
 
-
-
 .x-panel-header-default {
     background-image: none;
     background-color: #fff;
@@ -137,259 +182,17 @@
     background-color: #fff;
     border-bottom: 1px solid #cfcfcf;
 }
-/**panel头部肤色开始**/
-.x-panel-header-default-framed-top {
-	-moz-border-radius-topleft: 0px;
-	-webkit-border-top-left-radius: 0px;
-	border-top-left-radius: 0px;
-	-moz-border-radius-topright: 0px;
-	-webkit-border-top-right-radius: 0px;
-	border-top-right-radius: 0px;
-	-moz-border-radius-bottomright: 0;
-	-webkit-border-bottom-right-radius: 0;
-	border-bottom-right-radius: 0;
-	-moz-border-radius-bottomleft: 0;
-	-webkit-border-bottom-left-radius: 0;
-	border-bottom-left-radius: 0;
-	padding: 9px 9px 9px 9px;
-	border-width: 1px 1px 0 1px;
-	border-style: solid;
-	/**Panel背景颜色采用经典蓝**/
-	background-color: #5fa2dd;
-}
-.x-panel-header-title-default-framed {
-	color: #fff;
-	font-family: helvetica,arial,verdana,sans-serif;
-}
-.x-panel-default-framed {
-	-webkit-border-radius: 0px;
-	-moz-border-radius: 0px;
-	-ms-border-radius: 0px;
-	-o-border-radius: 0px;
-	border-radius: 0px;
-	padding: 0;
-	border-width: 1px;
-	border-style: solid;
-	background-color: white;
-}
-.x-panel-default-framed {
-	border-color: #fff;
-	padding: 0;
-}
-.x-panel-header-default-framed .x-tool-img {
-	background-color:#fff;
-}
 /**panel头部肤色结束**/
-/**window头部肤色开始**/
-.x-window-header-default {
-	border-width: 1px!important;
-}
-.x-window-header-default {
-	font-size: 15px;
-	/**
-	border-color: #35baf6;
-	background-color: #35baf6;
+/* .x-toolbar-footer {
+	padding: 6px 0 6px 6px;
+	border-style: solid;
 	border-color: #fff;
+	border-width: 0;
+	background-image: none;
 	background-color: #fff;
-	**/
-}
-.x-window-header-title-default {
-	/**
-	color: #fff;
-	**/
-	color: #35baf6;
-	font-size: 17px;
-	font-weight: 300;
-	font-family: helvetica,arial,verdana,sans-serif;
-	line-height: 32px;
-}
-
-.x-window-header-default .x-tool-img {
-	/**
-	background-color: #35baf6;
-	background-color: #fff;
-	**/
-}
-.x-window-default {
-	-webkit-border-radius: 0px;
-	-moz-border-radius: 0px;
-	-ms-border-radius: 0px;
-	-o-border-radius: 0px;
-	border-radius: 0px;
-	padding: 0;
-	border-width: 0px;
-	border-style: solid;
-	/**
-	background-color: #35baf6;
-	background-color: #fff;
-	**/
-}
-element.style {
-	box-shadow: #fff;
-	right: auto;
-	left: 383px;
-	top: 139px;
-	width: 600px;
-	height: 391px;
-	z-index: 19000;
-}
-.x-css-shadow {
-	position: absolute;
-	-webkit-border-radius: 0px;
-	-moz-border-radius: 0px;
-	-ms-border-radius: 0px;
-	-o-border-radius: 0px;
-	border-radius: 0px;
-}
-.x-window-header-default-top {
-	-moz-border-radius-topleft: 0px;
-	-webkit-border-top-left-radius: 0px;
-	border-top-left-radius: 0px;
-	-moz-border-radius-topright: 0px;
-	-webkit-border-top-right-radius: 0px;
-	border-top-right-radius: 0px;
-	-moz-border-radius-bottomright: 0;
-	-webkit-border-bottom-right-radius: 0;
-	border-bottom-right-radius: 0;
-	-moz-border-radius-bottomleft: 0;
-	-webkit-border-bottom-left-radius: 0;
-	border-bottom-left-radius: 0;
-	padding: 9px 9px 6px 9px;
-	border-width: 1px 1px 1px 1px;
-	border-style: solid;
-	/**
-	background-color: #35baf6;
-	background-color: #fff;
-	**/
-}
-
-.x-window-header-default {
-	border-width: 2px !important;
-}
-.x-window-header-default-top {
-	-moz-border-radius-topleft: 0;
-	-webkit-border-top-left-radius: 0;
-	border-top-left-radius: 0;
-	-moz-border-radius-topright: 0;
-	-webkit-border-top-right-radius: 0;
-	border-top-right-radius: 0;
-	-moz-border-radius-bottomright: 0;
-	-webkit-border-bottom-right-radius: 0;
-	border-bottom-right-radius: 0;
-	-moz-border-radius-bottomleft: 0;
-	-webkit-border-bottom-left-radius: 0;
-	border-bottom-left-radius: 0;
-	padding: 20px 14px 20px 14px;
-	border-width: 2px 2px 2px 2px;
-	border-style: solid;
-}
-/**window头部肤色结束**/
-
-/**tab选项默认样式开始**/
-.x-box-scroller-tab-bar-default {
-    background-color: #35baf6;
-}
-.x-tab-default-top {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    -o-border-radius: 0;
-    border-radius: 0;
-    padding: 8px 10px 8px 10px;
-    border-width: 0;
-    border-style: solid;
-    /**注释清爽肤色
-    background-color: #fff;
-    background-color: transparent;
-    **/
-}
-.x-tab-inner-default {
-	/**注释清爽肤色
-	background: #fff;
-    color: #35baf6;
-    **/
-}
-.x-tab.x-tab-active.x-tab-default .x-tab-inner-default {
-    /**注释清爽肤色
-       color: #fff;
-       background: #5fa2dd;
-    **/
-    color: #fff;
-}
-/**
-.x-tab.x-tab-active.x-tab-default {
-    border-color: #3892d3;
-    background-color: #3892d3;
-}
+} */
 
 
-.x-tab-bar-default-top > .x-tab-bar-body-default {
-    padding: 0px 0px 0px 0px;
-}
-.x-tab-bar-default-bottom > .x-tab-bar-body-default {
-    padding: 0px 0px 8px 0px;
-}
-**/
-.x-tab-bar-plain {
-	/**注释清爽肤色
-	background: #fff!important;
-	**/
-}
-.x-tab-bar-default {
-	/**蓝色
-    background-color: #5fa2dd;
-    **/
-    /**
-    注释清爽肤色
-    background-color: #fff;
-    **/
-}
-.x-tab.x-tab-active.x-tab-default {
-   /**注释清爽肤色
-    border-color: #35baf6;
-    background-color: #35baf6;
-    **/
-    border-color: #35baf6;
-    background-color: #35baf6;
-}
-.x-box-scroller-tab-bar-default {
-	/**注释清爽肤色
-	background-color: #fff;
-	**/
-}
-.x-tab-default {
-	/**注释清爽肤色
-	border-color: #fff;
-	cursor: pointer;
-	**/
-}
-.x-tab-default-bottom {
-	-moz-border-radius-topleft: 0px;
-	-webkit-border-top-left-radius: 0px;
-	border-top-left-radius: 0px;
-	-moz-border-radius-topright: 0px;
-	-webkit-border-top-right-radius: 0px;
-	border-top-right-radius: 0px;
-	-moz-border-radius-bottomright: 0px;
-	-webkit-border-bottom-right-radius: 0px;
-	border-bottom-right-radius: 0px;
-	-moz-border-radius-bottomleft: 0px;
-	-webkit-border-bottom-left-radius: 0px;
-	border-bottom-left-radius: 0px;
-	border-width: 1px 1px 1px 1px;
-	border-style: solid;
-	background-color: #fff;
-}
-.x-tab-default .x-tab-close-btn {
-	/**
-	top: 10px;
-	**/
-	right:10px;
-	/**
-	background: url(images/tab/tab-default-close.png) 0 0;
-	**/
-}
-/**tab选项默认样式结束**/
 
 /**Panel字体颜色开始**/
 .x-panel-header-title-default {
@@ -405,14 +208,107 @@ element.style {
 }
 /**accordion字体颜色结束**/
 
+
+/* .x-panel-header-title-default-framed {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Open Sans', 'Helvetica Neue', helvetica, arial, verdana, sans-serif;
+    line-height: 20px;
+} */
+.x-panel-header-default-framed-top {
+    -moz-border-radius-topleft: 0;
+    -webkit-border-top-left-radius: 0;
+    border-top-left-radius: 0;
+    -moz-border-radius-topright: 0;
+    -webkit-border-top-right-radius: 0;
+    border-top-right-radius: 0;
+    -moz-border-radius-bottomright: 0;
+    -webkit-border-bottom-right-radius: 0;
+    border-bottom-right-radius: 0;
+    -moz-border-radius-bottomleft: 0;
+    -webkit-border-bottom-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding: 10px 14px 10px 14px;
+    border-width: 0px 0px 0 0px;
+    border-style: solid;
+    /** Panel背景颜色采用默认
+    background-color: #fff;
+    **/
+}
+.x-panel-default-framed {
+    -moz-border-radius-topleft: 0;
+    -webkit-border-top-left-radius: 0;
+    border-top-left-radius: 0;
+    -moz-border-radius-topright: 0;
+    -webkit-border-top-right-radius: 0;
+    border-top-right-radius: 0;
+    -moz-border-radius-bottomright: 0;
+    -webkit-border-bottom-right-radius: 0;
+    border-bottom-right-radius: 0;
+    -moz-border-radius-bottomleft: 0;
+    -webkit-border-bottom-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding: 0 0 0 0;
+    border-width: 0px;
+    border-style: solid;
+    /**Panel背景颜色采用经典蓝**/
+    background-color: #5fa2dd;
+}
 img {
     cursor: pointer;
 }
+/**
+.x-tab-bar-default-left > .x-tab-bar-body-default {
+padding: 0px 0 0px 0px;
+}
+.x-tab-bar-default-top > .x-tab-bar-body-default {
+padding: 1px 4px 0px 0px;
+}
+**/
+/* .x-tab-focus.x-tab-default {
+border-color: transparent;
+background-color: transparent;
+outline: 1px solid #fff;
+outline-offset: -3px;
+} */
+/* .x-tab-bar-default-bottom > .x-tab-bar-body-default {
+padding: 0px 4px 1px 1px;
+} */
+
+/* element.style {
+right: auto;
+left: -2px;
+top: -2px;
+width: 1536px;
+}
+.x-window-header-default {
+border-width: 2px !important;
+}
+.x-window-header-default-top {
+-moz-border-radius-topleft: 0;
+-webkit-border-top-left-radius: 0;
+border-top-left-radius: 0;
+-moz-border-radius-topright: 0;
+-webkit-border-top-right-radius: 0;
+border-top-right-radius: 0;
+-moz-border-radius-bottomright: 0;
+-webkit-border-bottom-right-radius: 0;
+border-bottom-right-radius: 0;
+-moz-border-radius-bottomleft: 0;
+-webkit-border-bottom-left-radius: 0;
+border-bottom-left-radius: 0;
+padding: 20px 14px 20px 14px;
+border-width: 2px 2px 2px 2px;
+border-style: solid;
+background-color: #5fa2dd;
+} */
 
 .x-panel-header-default-framed {
     font-size: 16px;
     border: 1px solid #f5f5f5;
 }
 
-
-
+.x-grid-cell-inner-treecolumn {
+    padding: 3px 10px 3px 6px;
+}
