--- a/WebRoot/deng/source/css/index.css
+++ b/WebRoot/deng/source/css/index.css
@@ -25,15 +25,19 @@
 	background-color: #fff;
 	padding: 0px 0px 0px 0px;
 } */
+.x-accordion-layout-ct {
+    background-color: #fff;
+    padding: 0px 5px 0;
+}
 
-/* .x-panel-default-outer-border-rbl {
+ .x-panel-default-outer-border-rbl {
 	border-right-color: #f5f5f5 !important;
 	border-right-width: 1px !important;
 	border-bottom-color: #f5f5f5 !important;
 	border-bottom-width: 1px !important;
 	border-left-color: #f5f5f5 !important;
 	border-left-width: 1px !important;
-} */
+} 
 
 /**
 	.x-panel-body-default {
@@ -202,10 +206,10 @@
 /**accordion字体颜色开始
 
 **/
-.x-accordion-hd .x-panel-header-title {
+ .x-accordion-hd .x-panel-header-title {
     color: #35baf6;
     text-transform: none;
-}
+} 
 /**accordion字体颜色结束**/
 
 
