--- a/WebRoot/deng/source/css/triton.css
+++ b/WebRoot/deng/source/css/triton.css
@@ -25,6 +25,10 @@
 	background-color: #fff;
 	padding: 0px 0px 0px 0px;
 } */
+.x-accordion-layout-ct {
+    background-color: #fff;
+    padding: 0px 5px 0;
+}
 
  .x-panel-default-outer-border-rbl {
 	border-right-color: #f5f5f5 !important;
@@ -202,10 +206,10 @@
 /**accordion字体颜色开始
 
 **/
-.x-accordion-hd .x-panel-header-title {
+ .x-accordion-hd .x-panel-header-title {
     color: #35baf6;
     text-transform: none;
-}
+} 
 /**accordion字体颜色结束**/
 
 
