--- a/WebRoot/deng/source/css/triton.css
+++ b/WebRoot/deng/source/css/triton.css
@@ -316,3 +316,6 @@ background-color: #5fa2dd;
 .x-grid-cell-inner-treecolumn {
     padding: 3px 10px 3px 6px;
 }
+.x-accordion-item .x-accordion-hd {
+    background: #fff;
+}
