--- a/WebRoot/view/pc/form-view/form-design/css/common.css
+++ b/WebRoot/view/pc/form-view/form-design/css/common.css
@@ -270,7 +270,7 @@ cursor:pointer;
 .datapicker{cursor:pointer;}
 /*notice*/
 .notice{
-	border: 1px dashed #9dc8dc;
+	border: 1px dashed #ffefbb;
     padding: 15px 15px 15px 15px;
     background-color: #ffefbb;
     text-align: center;
