--- a/WebRoot/deng/source/css/index.css
+++ b/WebRoot/deng/source/css/index.css
@@ -327,7 +327,7 @@ background-color: #5fa2dd;
 .x-btn-default-toolbar-small {
 	/* border-color: #5fa2dd; */
 	border-color: #ffffff;
-	height:28px;
+	/* height:28px; */
 }
 .x-btn-inner-default-toolbar-small {
 	max-width: 100%;
@@ -360,7 +360,7 @@ background-color: #5fa2dd;
 }
 /**tbar与bbar鼠标移上样式**/
 .x-btn-over.x-btn-default-toolbar-small {
-	border-color: #fff;
+	border-color: #ffffff;
 	background-image: none;
 	/* background-color: #5fa2dd; */
 }
@@ -375,9 +375,16 @@ background-color: #5fa2dd;
 .x-btn-focus.x-btn-default-toolbar-small {
 	background-image: none;
 	/* background-color: #3892d3; */
-	-webkit-box-shadow: #fff 0 0px 0px 0 inset, #fff 0 -1px 0px 0 inset, #fff -1px 0 0px 0 inset, #fff 0px 0 0px 0 inset;
-	-moz-box-shadow: #fff 0 0px 0px 0 inset, #fff 0 -1px 0px 0 inset, #fff -1px 0 0px 0 inset, #fff 0px 0 0px 0 inset;
-	box-shadow: #fff 0 0px 0px 0 inset, #fff 0 -1px 0px 0 inset, #fff -1px 0 0px 0 inset, #fff 1px 0 0px 0 inset;
+	-webkit-box-shadow: #ffffff 0 0px 0px 0 inset, #ffffff 0 -1px 0px 0 inset, #ffffff -1px 0 0px 0 inset, #ffffff 0px 0 0px 0 inset;
+	-moz-box-shadow: #ffffff 0 0px 0px 0 inset, #ffffff 0 -1px 0px 0 inset, #ffffff -1px 0 0px 0 inset, #ffffff 0px 0 0px 0 inset;
+	box-shadow: #ffffff 0 0px 0px 0 inset, #ffffff 0 -1px 0px 0 inset, #ffffff -1px 0 0px 0 inset, #ffffff 1px 0 0px 0 inset;
+}
+.x-btn-focus.x-btn-over.x-btn-default-toolbar-small {
+	background-image: none;
+	/* background-color: #3892d3; */
+	-webkit-box-shadow: #ffffff 0 0px 0px 0 inset, #ffffff 0 -1px 0px 0 inset, #ffffff -1px 0 0px 0 inset, #ffffff 0px 0 0px 0 inset;
+	-moz-box-shadow: #ffffff 0 0px 0px 0 inset, #ffffff 0 -1px 0px 0 inset, #ffffff -1px 0 0px 0 inset, #ffffff 0px 0 0px 0 inset;
+	box-shadow: #ffffff 0 0px 0px 0 inset, #ffffff 0 -1px 0px 0 inset, #ffffff -1px 0 0px 0 inset, #ffffff 1px 0 0px 0 inset;
 }
 /**tbar与bbar禁用后样式**/
 .x-btn.x-btn-disabled.x-btn-default-toolbar-small {
