--- a/WebRoot/deng/source/css/index.css
+++ b/WebRoot/deng/source/css/index.css
@@ -200,7 +200,9 @@
 
 /**Panel字体颜色开始**/
 .x-panel-header-title-default {
-    color: #35baf6;
+    color: #17C4BB;
+    font-size: 18px;
+    font-weight: 700;
 }
 /**Panel字体颜色结束**/
 /**accordion字体颜色开始
