--- a/WebRoot/deng/source/plugins/other/jquery/alert/zeroModal.css
+++ b/WebRoot/deng/source/plugins/other/jquery/alert/zeroModal.css
@@ -38,7 +38,7 @@
     font-family: "Hiragino Sans GB", "Microsoft YaHei", Arial-normal, "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     position: absolute;
     box-shadow: 0 6px 24px rgba(0, 0, 0, .24);
-    border-radius: 2px;
+    border-radius: 2px!important;
     border: none;
     background-color: #fff;
     z-index: 1001;
