--- a/WebRoot/deng/source/css/index.css
+++ b/WebRoot/deng/source/css/index.css
@@ -459,3 +459,6 @@ background-color: #5fa2dd;
     color: #17C4BB;
     font-weight:900;
 }
+.x-window-header-title-default {
+    color: #17C4BB;
+}
