--- a/WebRoot/deng/source/plugins/admin/index/global/plugins/bootstrap-addtab/css/bootstrap.addtabs.css
+++ b/WebRoot/deng/source/plugins/admin/index/global/plugins/bootstrap-addtab/css/bootstrap.addtabs.css
@@ -6,14 +6,14 @@
 .close-tab {
     font-size: 10px;
     position:absolute;
-    right: 15px;
+    right: 0px;
     top: 15px;
-    padding-left: 25px;
+    /* padding-right: 0px; */
     z-index: 100;
     cursor: hand;
     cursor: pointer;
     color: #ffffff;
-    display: none;
+    display: block;
 }
 
 .nav-tabs {position: relative;}
