--- a/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin.css
+++ b/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin.css
@@ -48,14 +48,8 @@
 }
 .page-sidebar .page-sidebar-menu.page-sidebar-menu-compact>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-compact>li>a {
     min-height: 50px;
-    padding: 15px;
+    padding: 25px 15px 25px 5px;
 } 
-.page-sidebar .page-sidebar-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu>li>a {
-    /* border-top: 1px solid #23262E; */ 
-}
-.page-sidebar-fixed .page-sidebar-menu .sub-menu {
-	/**background: #4E5465;**/
-}
 .page-sidebar .page-sidebar-menu .sub-menu>li.active>a, .page-sidebar .page-sidebar-menu .sub-menu>li.open>a, .page-sidebar .page-sidebar-menu .sub-menu>li:hover>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu>li.active>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu>li.open>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu>li:hover>a {
     background: #009688!important;
 }
@@ -65,23 +59,6 @@
 .page-sidebar .page-sidebar-menu>li>a>i[class*=icon-], .page-sidebar .page-sidebar-menu>li>a>i[class^=icon-], .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu>li>a>i[class*=icon-], .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu>li>a>i[class^=icon-] {
     color: rgba(255,255,255,.7);
 }
-/* .page-sidebar .page-sidebar-menu .sub-menu, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu {
-    margin: 0px 0;
-    padding: 5px 5px 5px 5px;
-}
-.page-sidebar .page-sidebar-menu .sub-menu li>a>i, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu li>a>i {
-    margin-right: 6px;
-}
-.page-sidebar .page-sidebar-menu>li>a>[class^=icon-], .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu>li>a>[class^=icon-] {
-    top: 2px;
-    margin-left: 1px;
-    margin-right: -2px;
-} */
-/**
-.page-sidebar .page-sidebar-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu>li>a {
-    color: #fff;
-}
-**/
 .page-sidebar .page-sidebar-menu .sub-menu, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu {
     margin: 0px 0;
 }
@@ -102,119 +79,19 @@
 .btn-circle {
     border-radius: 0px!important;
 }
-.nav-pills, .nav-tabs {
-    margin-bottom: 0px; 
-}
 .page-header.navbar .menu-toggler.sidebar-toggler {
     float: right;
     margin: 23px -8px 0;
 }
 .row {
-    margin-left: -20px;
-    margin-right: -15px;
-}
-a:hover,a:focus{
-	outline: none;
-	text-decoration: none;
-}
-.nav-tabs li{
-	margin: 0;
-}
-.nav-tabs li a{
-	font-size:14px;
-	/* color:#1e232f;  */
-	/* background:#fff; */
-	/* margin:0; */
-	/* 
-	padding:10px 5px; 
-	*/
-	border-radius:0;
-	border:none;
-	/* border-right:1px solid #f5f5f5; */
-	text-transform:capitalize;/**capitalize(不改变英文大小写) lowercase(改变为小写) uppercase（改变为小写）**/
-	position:relative;
-}
-.nav-tabs li a:hover{
-	border-top: none;
-	border-bottom: none;
-	border-right-color: #ddd;
-}
-.nav-tabs li.active a,
-.nav-tabs li.active a:hover{
-	color: #fff;
-	border: none;
-	/* 
-	background: #17C4BB; 
-	*/
-	border-right: 0px solid #ddd;
-}
-.nav-tabs li.active a:before{
-	/* width: 58%;
-	height: 4px; */
-	/* background: #fff; */
-	/* position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	margin: 0 auto; */
-}
-.nav-tabs li.active a:after{
-	/* border-top: 10px solid #17C4BB; 
-	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;
-	position: absolute;
-	bottom: -10px;
-	left: 43%; */
-}
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
-    background-color: #ffffff;/**选项卡背景颜色#23262E**/
-    border: 1px solid #23262E;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 .page-container-bg-solid .page-content {
     background: #f5f5f5;
 }
 .page-sidebar-fixed:not(.page-footer-fixed) .page-footer {
     background-color: #f5f5f5;
-}
-@media only screen and (max-width: 480px){
-	.nav-tabs li{
-		width: 100%;
-		text-align: center;
-	}
-	.nav-tabs li.active a,
-	.nav-tabs li.active a:after,
-	.nav-tabs li.active a:hover{
-		border: none;
-	}
-}
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
-    color: #000000;
-    background-color: #ffffff;
-    border: 0px solid #f5f5f5;
-    border-bottom-color: transparent;
-    cursor: default;
-}
-.nav-tabs li.active a, .nav-tabs li.active a:hover {
-    color: #999;
-}
-.page-sidebar .page-sidebar-menu.page-sidebar-menu-compact>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-compact>li>a {
-    min-height: 50px;
-    padding: 21px;
-}
-.nav>li>a {padding: 10px 20px;}
-.glyphicon-remove:before {
-    content: "\e014";
-    color: #dddddd;
-}
-/* [class*=" fa-"]:not(.fa-stack), [class*=" glyphicon-"], [class*=" icon-"], [class^=fa-]:not(.fa-stack), [class^=glyphicon-], [class^=icon-] {
-    line-height: 32px;
-} */
-.close-tab {
-    font-size: 14px;
-    padding-top: 10px;
-    padding-right:0px;
-    cursor: pointer;
-    color: #f5f5f5;
 }
 .page-sidebar .page-sidebar-menu>li.active>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu>li.active>a {
     font-size: 14px;
@@ -244,14 +121,11 @@ a:hover,a:focus{
 .page-sidebar .page-sidebar-menu .sub-menu, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu {
     background: #212d41;
 }
-.nav-tabs {
-    border: 0px solid #32404e;
-}
 .page-content-wrapper .page-content {
     margin-left: 225px;
     margin-top: 0;
     min-height: 600px;
-    padding: 25px 20px 10px;
+    padding: 25px 0px 10px;
 }
 .page-header.navbar .page-logo {
     float: left;
@@ -259,7 +133,7 @@ a:hover,a:focus{
     width: 225px;
     height: 68px;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 18px;
 }
 .page-sidebar-fixed .page-footer {
     margin-left: 225px;
@@ -271,6 +145,12 @@ a:hover,a:focus{
     margin-left: 0;
     top: 68px;
     width: 225px;
+}
+.page-sidebar .page-sidebar-menu.page-sidebar-menu-compact>li>.sub-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-compact>li>.sub-menu>li>a {
+    padding-left: 34px;
+}
+.page-sidebar .page-sidebar-menu .sub-menu li>.sub-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu li>.sub-menu>li>a {
+    padding-left: 34px;
 }
 .modal.in .modal-dialog{-webkit-transform:translate(0,-50%);-ms-transform:translate(0,-50%);-o-transform:translate(0,-50%);transform:translate(0,-50%)}
 .modal-dialog{position:absolute;width:auto;margin:10px auto;left:0;right:0;top:50%;}
