--- a/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin-white.css
+++ b/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin-white.css
@@ -50,7 +50,7 @@
 }
 .page-sidebar .page-sidebar-menu.page-sidebar-menu-compact>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-compact>li>a {
     min-height: 50px;
-    padding: 25px 15px 25px 5px;
+    padding: 15px 15px 15px 5px;
 } 
 .page-sidebar .page-sidebar-menu .sub-menu>li.active>a, .page-sidebar .page-sidebar-menu .sub-menu>li.open>a, .page-sidebar .page-sidebar-menu .sub-menu>li:hover>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu>li.active>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu>li.open>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu>li:hover>a {
     background: #f2f6f9!important;
@@ -170,3 +170,4 @@
 body{
 	background: #e9ecf3;
 }
+.page-sidebar .page-sidebar-menu .sub-menu li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu li>a {padding: 4px 15px;font-weight: 100;}
