--- a/jehc-web/src/main/webapp/deng/source/css/bootcommon.css
+++ b/jehc-web/src/main/webapp/deng/source/css/bootcommon.css
@@ -1,79 +1,1 @@
-table.dataTable.no-footer {
-    border-bottom: 1px solid #ffffff;
-}
-.uneditable-input {
-    padding: 6px 12px;
-    min-width: 56px;
-}
-.dataTables_wrapper .dataTables_processing {
-    padding-top: 7px;
-}
-.modal.in .modal-dialog{-webkit-transform:translate(0,-50%);-ms-transform:translate(0,-50%);-o-transform:translate(0,-50%);transform:translate(0,-50%)}
-.modal-dialog{position:absolute;width:auto;margin:10px auto;left:0;right:0;top:50%;}
-@media (min-width:768px){.modal-dialog{width:768px}
-.img{cursor:pointer;}
-
-.row {  
-  margin-top: 4px;  
-  margin-bottom: 4px;  
-} 
-legend {
-	font-size:16px;
-    /* padding: 0px 0px 0px;
-    margin-bottom: 0px; */
-    background: #f5f5f5;
-}
-fieldset, legend {
-    padding: 5px 0px 5px 0px;
-}
-/* dataTables列内容居中 */  
-/* .table>tbody>tr>td{  
-        text-align:left;  
-}   */
-  
-/* dataTables表头居中 */  
-.table>thead:first-child>tr:first-child>th{  
-        /* text-align:left;   */
-        background-color: #f5f5f5;
-} 
-.table>thead:first-child>tr:first-child>th p{  
-        /* text-align:left;   */
-        font-weight:normal;
-}  
-table.dataTable thead th, table.dataTable tfoot th {
-    font-weight: normal;
-}
-/* 
-.table td, .table th {
-    font-size: 12px;
-} */
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
-    vertical-align: middle;
-}
-.dataTables_wrapper .dataTables_length {
-    float: left;
-    padding-top: 0.3em;
-}
-.has-success .checkbox, .has-success .checkbox-inline, .has-success .control-label, .has-success .form-control-feedback, .has-success .help-block, .has-success .radio, .has-success .radio-inline, .has-success.checkbox label, .has-success.checkbox-inline label, .has-success.radio label, .has-success.radio-inline label {
-    color: #333333;
-}
-.has-success .form-control {
-    border-color: #c2cad8;
-}
-.page-header { margin: 5px 0 2px;}
-.panel { margin-bottom: 0px;}
-.table-striped>tbody>tr:nth-of-type(odd) {
-    background-color: rgb(255, 255, 255);
-}
-table.dataTable tbody tr {
-    background-color: #f5f5f5;
-}
-body {
-    color: #666;
-}
-table.dataTable tbody tr.selected {
-    background-color: #f5f5ff5;
-}
-.btn-icon-only>[class^=icon-], .btn-icon-only>i {
-    margin-top: 4px;
-}
+table.dataTable.no-footer{border-bottom:1px solid #fff}.uneditable-input{padding:6px 12px;min-width:56px}.dataTables_wrapper .dataTables_processing{padding-top:7px}.modal.in .modal-dialog{-webkit-transform:translate(0,-50%);-ms-transform:translate(0,-50%);-o-transform:translate(0,-50%);transform:translate(0,-50%)}.modal-dialog{position:absolute;width:auto;margin:10px auto;left:0;right:0;top:50%}@media(min-width:768px){.modal-dialog{width:768px}.img{cursor:pointer}.row{margin-top:4px;margin-bottom:4px}legend{font-size:16px;background:#f5f5f5}fieldset,legend{padding:5px 0 5px 0}.table>thead:first-child>tr:first-child>th{background-color:#f5f5f5}.table>thead:first-child>tr:first-child>th p{font-weight:normal}table.dataTable thead th,table.dataTable tfoot th{font-weight:normal}.table>tbody>tr>td,.table>tbody>tr>th,.table>tfoot>tr>td,.table>tfoot>tr>th,.table>thead>tr>td,.table>thead>tr>th{vertical-align:middle}.dataTables_wrapper .dataTables_length{float:left;padding-top:.3em}.has-success .checkbox,.has-success .checkbox-inline,.has-success .control-label,.has-success .form-control-feedback,.has-success .help-block,.has-success .radio,.has-success .radio-inline,.has-success.checkbox label,.has-success.checkbox-inline label,.has-success.radio label,.has-success.radio-inline label{color:#333}.has-success .form-control{border-color:#c2cad8}.page-header{margin:5px 0 2px}.panel{margin-bottom:0}.table-striped>tbody>tr:nth-of-type(odd){background-color:#fff}table.dataTable tbody tr{background-color:#f5f5f5}body{color:#666}table.dataTable tbody tr.selected{background-color:#f5f5ff5}.btn-icon-only>[class^=icon-],.btn-icon-only>i{margin-top:4px}.page-sidebar .page-sidebar-menu li>a>.arrow:before,.page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu li>a>.arrow:before{border-left:6px solid transparent;border-right:6px solid transparent;border-bottom:6px solid #a0a0a0;content:"";margin-right:-10px;margin-left:-10px}.page-sidebar .page-sidebar-menu li>a>.arrow.open:before,.page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu li>a>.arrow.open:before{border-top:6px solid #a0a0a0;border-left:6px solid transparent;border-right:6px solid transparent;border-bottom:6px solid transparent;content:"";margin-right:-10px;margin-left:-10px}
