--- a/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin.css
+++ b/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin.css
@@ -1,6 +1,6 @@
-.page-boxed .page-footer .page-footer-inner, .page-footer-fixed .page-footer .page-footer-inner {
-    color: #ffffff;
-}
+/* .page-boxed .page-footer .page-footer-inner, .page-footer-fixed .page-footer .page-footer-inner {
+    color: #eee;
+} */
 .page-sidebar .page-sidebar-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu>li>a {
     font-size: 14px;
     font-weight: 300;
@@ -105,31 +105,31 @@
 .page-sidebar .page-sidebar-menu .sub-menu, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu {
     background: #212d41;
 }
-.page-content-wrapper .page-content {
+/* .page-content-wrapper .page-content {
     margin-left: 225px;
     margin-top: 0;
     min-height: 600px;
     padding: 25px 0px 10px;
-}
-.page-header.navbar .page-logo {
+} */
+/* .page-header.navbar .page-logo {
     float: left;
     display: block;
     width: 225px;
     height: 68px;
     padding-left: 20px;
     padding-right: 18px;
-}
-.page-sidebar-fixed .page-footer {
+} */
+/* .page-sidebar-fixed .page-footer {
     margin-left: 225px;
     padding: 8px 20px 5px;
     
-}
-.page-sidebar-fixed .page-sidebar {
+} */
+/* .page-sidebar-fixed .page-sidebar {
     position: fixed!important;
     margin-left: 0;
     top: 68px;
     width: 225px;
-}
+} */
 .page-sidebar .page-sidebar-menu.page-sidebar-menu-compact>li>.sub-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-compact>li>.sub-menu>li>a {
     padding-left: 34px;
 }
@@ -147,3 +147,39 @@
     border-color: #c2cad8;
 }
 .page-sidebar .page-sidebar-menu .sub-menu li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu li>a {padding: 4px 15px;font-weight: 100;}
+
+.arrow {
+    float: right;
+    margin-top: 12px;
+}
+.page-sidebar .page-sidebar-menu .sub-menu li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu li>a {
+    display: block;
+    margin: 0;
+    padding: 6px 15px 0px 70px;
+    text-align:left;
+    text-decoration: none;
+    font-size: 13px;
+    font-weight: 300;
+    background: 0 0;
+}
+.page-sidebar .page-sidebar-menu .sub-menu li>.sub-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu li>.sub-menu>li>a {
+    padding-left: 70px;
+}
+.page-sidebar .page-sidebar-menu .sub-menu li>.sub-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu li>.sub-menu>li>a {
+    padding-left: 70px;
+}
+.page-sidebar .page-sidebar-menu .sub-menu li>.sub-menu>li>.sub-menu>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu li>.sub-menu>li>.sub-menu>li>a {
+    padding-left: 70px;
+}
+.page-sidebar .page-sidebar-menu>li>a>i.glyphicon, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu>li>a>i.glyphicon {
+    top: 0px;
+    margin-left: 1px;
+    margin-right: 4px;
+}
+/* .page-footer {
+    font-size: 12px;
+    height: 30px;
+} */
+.page-footer-fixed .page-boxed .page-footer, .page-footer-fixed .page-footer {
+    background-color: #f5f5f5;
+}
